# CTI-PLATEFORM

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  LICENSE  Makefile  README.md  _demo_terminal.html  actors.json  chapitre3_bloc1.tex  chapitre3_bloc2.tex  chapitre3_bloc3.tex  chapitre3_bloc4.tex  chapitre3_complet.tex  chapitre4_bloc1.tex  chapitre4_bloc2.tex  chapitre4_bloc3.tex  chapitre4_bloc4.tex  chapitre4_complet.html  chapitre4_complet.tex  docker-compose.yml  generate_pdf.js  requirements.txt  screenshot_views.js  start_ONYX_demo.bat  start_ONYX_full.bat  test_ia_live.py
infra/elasticsearch/: elasticsearch.yml
infra/mongodb/: init-mongo.js
infra/tor/: Dockerfile  circuit_rotator.py  entrypoint.sh  privoxy.conf  torrc
onyx-analyzers/: pyproject.toml
onyx-analyzers/onyx_analyzers/: __init__.py
onyx-api/: .env.template  Dockerfile  guardrails_config.yml  pyproject.toml
onyx-api/assets/: osint_cache.json
onyx-api/migrations/: 20260418_add_decay_fields.py
onyx-api/onyx_api/: __init__.py  config.py  main.py
onyx-api/onyx_api/auth/: __init__.py  jwt.py
onyx-api/onyx_api/routers/: __init__.py  actors.py  agent.py  auth.py  chat.py  dashboard.py  forum.py  health.py  internal.py  iocs.py  mitre.py  nlp.py  reports.py  taxii.py  websocket_hub.py
onyx-api/onyx_api/services/: __init__.py  alias_disambiguation.py  behavioral_convergence.py  enrichment.py  gemini.py  geoip.py  guardrails.py  osint_integrations.py  query_generator.py  rag_pipeline.py  recommendation_engine.py  report_engine.py
onyx-api/onyx_api/utils/: guardrails.py  security_filter.py
onyx-api/onyx_api/workers/: decay_learning_worker.py  dynamic_reports.py  geopolitical_ingestor.py  ioc_persister.py  osint_poller.py  rss_ingestor.py
onyx-connectors/: pyproject.toml
onyx-connectors/onyx_connectors/: __init__.py
onyx-core/: pyproject.toml
onyx-core/onyx_core/: __init__.py  config.py
onyx-core/onyx_core/models/: __init__.py  actor_decay_profile.py  stix.py  threat_actor_model.py
onyx-core/onyx_core/services/: __init__.py  celery_app.py  confidence_composite.py  decay_engine.py  elasticsearch.py  event_bus.py  mongodb.py  neo4j.py  postgres.py  redis.py  standalone.py  threat_scoring.py
onyx-core/tests/integration/: test_ioc_persister_decay.py
onyx-core/tests/unit/: test_confidence_composite.py  test_decay_engine.py
onyx-crawlers/: pyproject.toml
onyx-crawlers/onyx_crawlers/: __init__.py
onyx-crawlers/onyx_crawlers/clearweb/: __init__.py  github_monitor.py  pastebin_monitor.py
onyx-crawlers/onyx_crawlers/darkweb/: Untitled-1.txt  __init__.py  spider_base.py  tor_manager.py
onyx-crawlers/onyx_crawlers/darkweb/spiders/: __init__.py  ransomware_blogs.py
onyx-dashboard/: Dockerfile  Dockerfile.frontend  demo_capture.js  demo_video.js  generate_pdf.js  next.config.js  package-lock.json  package.json  screenshot_bloc3.js  screenshot_views.js  tailwind.config.js
onyx-dashboard/src/app/: layout.tsx  page.tsx
onyx-dashboard/src/components/: ActeursMenace.tsx  AgenticCopilot.tsx  AliasTreePanel.tsx  AttackMatrix.tsx  CanvasOrbital.tsx  CanvasTimeline.tsx  ConvergenceBadge.tsx  DashboardClient.tsx  DecaySparkline.tsx  ErrorBoundary.tsx  ExecutiveDashboard.tsx  ForumPanel.tsx  IntelligenceBrief.tsx  IoCTable.tsx  KillChainTimeline.tsx  KillChainTimelineRefonte.tsx  LaboratoireIA.tsx  LiveDataProvider.tsx  NLPAnalyzer.tsx  OnyxCopilot.tsx  RecommendationsPanel.tsx  ReportGenerator.tsx  SIEMRuleConverter.tsx  STIXBundleViewer.tsx  (+7 more)
onyx-nlp/: pyproject.toml
onyx-nlp/onyx_nlp/: __init__.py
onyx-nlp/onyx_nlp/extractors/: __init__.py  ioc_extractor.py  ttp_mapper.py
onyx-nlp/onyx_nlp/processors/: __init__.py  pipeline.py
pdf-generator/: architecture_document.html  generate-architecture.js  generate.js  package-lock.json  package.json
scripts/: exhibition_injector.py  verify_flow.py
(+45 files in other folders)
