[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "onyx-analyzers"
version = "3.0.0"
description = "ONYX CTI Platform — Observable Analysis Engine (Cortex-inspired)"
requires-python = ">=3.12"
dependencies = [
    "onyx-core>=3.0.0",
    "httpx>=0.27,<1.0",
]
