[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "onyx-api"
version = "3.1.0"
description = "ONYX CTI Platform — FastAPI REST + GraphQL API Server with RAG-enabled AI Copilot"
requires-python = ">=3.12"
license = {text = "Proprietary"}

dependencies = [
    "onyx-core>=3.0.0",
    "fastapi>=0.111,<1.0",
    "uvicorn[standard]>=0.29,<1.0",
    "strawberry-graphql[fastapi]>=0.224,<1.0",
    "python-jose[cryptography]>=3.3,<4.0",
    "passlib[bcrypt]>=1.7,<2.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27,<1.0",
    "orjson>=3.10,<4.0",

    # — AI / RAG Subsystem —
    "google-genai>=1.0.0",
    "qdrant-client>=1.12.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.3",
    "mypy>=1.9",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
