[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "onyx-core"
version = "3.0.0"
description = "ONYX CTI Platform — Core domain models, STIX 2.1 schema, and shared services"
requires-python = ">=3.12"
license = {text = "Proprietary"}

dependencies = [
    "pydantic>=2.6,<3.0",
    "pydantic-settings>=2.2,<3.0",
    "motor>=3.3,<4.0",
    "elasticsearch[async]>=8.13,<9.0",
    "redis[hiredis]>=5.0,<6.0",
    "celery[redis]>=5.3,<6.0",
    "python-dateutil>=2.9,<3.0",
    "orjson>=3.10,<4.0",
    "structlog>=24.1,<25.0",
    "tenacity>=8.2,<9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.3",
    "mypy>=1.9",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "S", "B", "A", "C4", "T20"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
