[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "onyx-crawlers"
version = "3.0.0"
description = "ONYX CTI Platform — Dark Web & Clear Web Crawler Modules"
requires-python = ">=3.12"
dependencies = [
    "onyx-core>=3.0.0",
    "scrapy>=2.11,<3.0",
    "playwright>=1.43,<2.0",
    "httpx[socks]>=0.27,<1.0",
    "beautifulsoup4>=4.12,<5.0",
    "lxml>=5.2,<6.0",
    "simhash>=2.1,<3.0",
    "langdetect>=1.0.9,<2.0",
    "pysocks>=1.7,<2.0",
]
